--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <title>Malik Atamnh</title>
-    <link rel="stylesheet" href="/Users/mac/Desktop/css - my site/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="/Users/mac/Desktop/css - my site/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,16 +18,16 @@
 
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="cloud.png" alt="cloud-img">
       <h1>Im Malik</h1>
       <h2>a Programmer</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/mountain.png" alt="mountain-img">
+      <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+      <img src="mountain.png" alt="mountain-img">
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img class="profile-pic" src="images/malik-profile-pic.jpeg" alt="malik's profile picture">
+        <img class="profile-pic" src="malik-profile-pic.jpeg" alt="malik's profile picture">
         <h2 class="hello-intro">Hello</h2>
         <p class="intro">I am a software engeering student at shenkar, currently doing a web development course on Udemy to enrich my knowledge.</p>
       </div>
@@ -35,12 +35,12 @@
       <div class="skills">
         <h2>My Skills</h2>
         <div class="skill-row">
-          <img class="first-skill-pic" src="images/programming.png" alt="">
+          <img class="first-skill-pic" src="programming.png" alt="">
           <h3>Programming</h3>
           <p class="code-skill-discription1">I have started programming in 2019 at Braude college, And now im moving to Shenkar college to continue my journey, Beside my side projects that i do to keep my skill alive.</p>
         </div>
         <div class="skill-row">
-          <img class="second-skill-pic" src="images/binary-code.png" alt="">
+          <img class="second-skill-pic" src="binary-code.png" alt="">
           <h3>Why i love this Coding</h3>
           <p class="code-skill-discription2">Since i was a little kid technology always interested me, i have a huge passion for this field and i have always was and will be in this culture.</p>
         </div>
