--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="skill-row">
           <img class="first-skill-pic" src="programming.png" alt="">
           <h3>Programming</h3>
-          <p class="code-skill-discription1">I have started programming in 2019 at Braude college, And now im moving to Shenkar college to continue my journey, Beside my side projects that i do to keep my skill alive.</p>
+          <p class="code-skill-discription1">I have started programming in 2019 at Braude college, And now im moving to Shenkar college to continue my journey, Beside my side projects that i do to keep my skills alive.</p>
         </div>
         <div class="skill-row">
           <img class="second-skill-pic" src="binary-code.png" alt="">
